--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <a href="/" data-link>Início</a>
             <a href="/alunos" data-link>Alunos</a>
             <a href="/sobre" data-link>Sobre</a>
+            <a href="/cursos" data-link>Cursos</a>
+            <a href="/professores" data-link>Professores</a>
         </nav>
     </header>
 
